style: fix responsive layout broken
Especially on mobile

--- a/styles/output.css
+++ b/styles/output.css
@@ -782,8 +782,6 @@ a:active {
 
 html,
   body {
-  width: 100vw;
-  height: 100vh;
   display: flex;
 }
 
@@ -1208,6 +1206,10 @@ input[type='search']::-webkit-search-decoration,
   height: 64px;
 }
 
+.h-\[calc\(100vh-64px\)\] {
+  height: calc(100vh - 64px);
+}
+
 .h-auto {
   height: auto;
 }
@@ -1219,10 +1221,6 @@ input[type='search']::-webkit-search-decoration,
 .h-max {
   height: -moz-max-content;
   height: max-content;
-}
-
-.h-screen {
-  height: 100vh;
 }
 
 .min-h-\[400px\] {
@@ -1379,8 +1377,8 @@ input[type='search']::-webkit-search-decoration,
   justify-content: space-between;
 }
 
-.gap-1 {
-  gap: 0.25rem;
+.justify-items-stretch {
+  justify-items: stretch;
 }
 
 .gap-\[8px\] {
@@ -1393,6 +1391,10 @@ input[type='search']::-webkit-search-decoration,
 
 .self-stretch {
   align-self: stretch;
+}
+
+.justify-self-stretch {
+  justify-self: stretch;
 }
 
 .overflow-hidden {
@@ -1476,6 +1478,11 @@ input[type='search']::-webkit-search-decoration,
 
 .border-t-transparent {
   border-top-color: transparent;
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .bg-gray3 {
@@ -1918,6 +1925,10 @@ input[type='search']::-webkit-search-decoration,
     max-width: 425px;
   }
 
+  .max-\[425px\]\:flex-wrap {
+    flex-wrap: wrap;
+  }
+
   .max-\[425px\]\:self-stretch {
     align-self: stretch;
   }
@@ -1930,23 +1941,15 @@ input[type='search']::-webkit-search-decoration,
     padding: 0.75rem;
   }
 
-  .max-\[425px\]\:px-\[20px\] {
-    padding-left: 20px;
-    padding-right: 20px;
+  .max-\[425px\]\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }
 
 @media (max-width: 320px) {
-  .max-\[320px\]\:flex-col {
-    flex-direction: column;
-  }
-
-  .max-\[320px\]\:items-center {
-    align-items: center;
-  }
-
-  .max-\[320px\]\:justify-center {
-    justify-content: center;
+  .max-\[320px\]\:items-start {
+    align-items: flex-start;
   }
 
   .max-\[320px\]\:py-3 {
