--- a/styles/root.css
+++ b/styles/root.css
@@ -77,9 +77,6 @@
 @layer components {
   html,
   body {
-    width: 100vw;
-    height: 100vh;
-
     display: flex;
   }
 
